--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(game.load)
 export(game.load.pl)
 export(liczymy)
 export(meangeo)
+export(rysuj)
 export(se.gam)
 export(se.geo)
 export(se.lnor)
